# SimpleTransceiver

app/: build.gradle
app/src/androidTest/java/com/example/bironu/simpletransceiver/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/bironu/simpletransceiver/: CommonSettings.java  CommonUtils.java  Job.java  (+7 more)
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/codec/: CMakeLists.txt  OSNetworkSystem.cpp  bv16_jni.cpp  g722_jni.cpp  gsm_jni.cpp  silk16_jni.cpp  silk24_jni.cpp  silk8_jni.cpp  speex_jni.cpp
app/src/main/jni/codec/bx16_fixedp/bv16/: bitpack.c  excquan.c  fineptch.c  g192.c  gaindec.c  gainquan.c  lspdec.c  lspquan.c  postfilt.c  preproc.c  ptquan.c
app/src/main/jni/codec/bx16_fixedp/itug191lib/: basop32.c
app/src/main/jni/codec/bx16_fixedp/itug729ilib/: oper_32b.c
app/src/main/jni/codec/silk/src/: SKP_Silk_PLC.c  SKP_Silk_decode_frame.c  SKP_Silk_enc_API.c  SKP_Silk_pitch_analysis_core.c  SKP_Silk_resample_2_3_coarse.c  SKP_Silk_resample_2_3_coarsest.c  SKP_Silk_tables_other.c
app/src/main/jni/codec/spandsp/: g722.c  gsm0610_decode.c  gsm0610_encode.c  gsm0610_long_term.c  gsm0610_lpc.c  gsm0610_preprocess.c  gsm0610_rpe.c  gsm0610_short_term.c  vector_int.c
app/src/main/jni/codec/speex-1.2rc1/libspeex/: cb_search.c  filters.c  ltp.c  modes.c  nb_celp.c  quant_lsp.c  speex_callbacks.c  vq.c
app/src/main/res/layout/: main_activity.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: preferences.xml
gradle/wrapper/: gradle-wrapper.properties
(+100 files in other folders)
